@@ -95,7 +95,7 @@ DEPENDENCY=/BeOS/develop/projects/Paladin-Related/Paladin.dev/SourceTypeYacc.cpp
 SOURCEFILE=StatCache.cpp
 DEPENDENCY=/BeOS/develop/projects/Paladin-Related/Paladin.dev/StatCache.cpp|/BeOS/develop/projects/Paladin-Related/Paladin.dev/StatCache.h|/BeOS/develop/projects/Paladin-Related/Paladin.dev/ObjectList.h
 GROUP=Third Party
-EXPANDGROUP=no
+EXPANDGROUP=yes
 SOURCEFILE=AutoTextControl.cpp
 DEPENDENCY=/BeOS/develop/projects/Paladin-Related/Paladin.dev/AutoTextControl.cpp|/BeOS/develop/projects/Paladin-Related/Paladin.dev/AutoTextControl.h
 SOURCEFILE=BitmapButton.cpp
