@@ -25,3 +25,4 @@ New vector icon for project files
 Removed the unnecessary quit button from start window
 Added a MIME sniffer rule to the Paladin project type to work around another MIME bug in Haiku
 Fixed a bug with duplication of local include paths
+Opening a project from Terminal (like "Paladin myproject") now doesn't need the extension and works faster in some cases
